Version bumps and added Apache v2 license to VFS implementation.